# rust-rocket

./: Cargo.toml  README.md  Rocket.toml
docs/: configuration.md  requests.md  responses.md  rocket_contrib.md  state.md  testing.md
src/: lib.rs  main.rs
src/config/: dev.rs  mod.rs
src/db/: mod.rs  redis.rs
src/error_catchers/: customized_error_catchers.rs  mod.rs  standard_http_error_catchers.rs
src/fairings/: ad_hoc.rs  counter.rs  mod.rs  request_timer.rs
src/routes/: body_data.rs  body_data_form.rs  body_data_streaming.rs  configuration.rs  cookies.rs  database.rs  dynamic_paths.rs  format.rs  forwarding.rs  methods.rs  mod.rs  query_strings.rs  request_guards.rs  state.rs
src/state/: configuration.rs  mod.rs  states.rs
static/: foo.txt
tests/: configuration.rs  database.rs  req_body_data_form.rs  req_body_data_form_enum_renaming.rs  req_body_data_forms.rs  req_body_data_streaming.rs  req_cookies.rs  req_dynamic_paths.rs  req_error_catchers.rs  req_format.rs  req_forwarding.rs  req_methods.rs  req_query_strings.rs  req_request_guards.rs  state.rs
