[package]
name = "network-rocket"
version = "0.1.0"
authors = ["Robocat <neatfx@gmail.com>"]
edition = "2018"

[dependencies]
rocket = { version = "0.4.4", default-features = false, features = ["private-cookies"] }
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json", "redis_pool", "serve"]